--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Wit and humor'
 - !lcc 'PN'
+- GITenberg
 title: 'The Wit of Women
 
   Fourth Edition'
